# IskIn-EngeC

./: .coverage  .gitignore  REAME.md  init_db.py  iskin.db  pyproject.toml  requirements.txt  run_seeder.py  test_detect_endpoint.py  test_nlp_module.py  ПЕРЕД ЗАПУСКОМ.txt
docs/: CHANGELOG.md  PROJECT_METRICS.md  TECHNICAL_REPORT.md  YOLO_TRAINING.md  ОТЧЁТ_ПО_ИНТЕГРАЦИИ_YOLO_ENDPOINT.md
models/predictive/: failure_forecaster.pth  scaler.pkl
models/yolo/: ОТЧЁТ_ПО_ОБУЧЕНИЮ_YOLO.md  ОТЧЁТ_ПО_ОБУЧЕНИЮ_YOLO_v2.md
models/yolo/yolov8n/yolo_crack_detection/: args.yaml
notebooks/: 02_yolo_training.ipynb  03_energy_analysis.ipynb
scripts/: download_datasets.py  extract_datasets.py  train_predictive.py  train_yolo.py
src/api/: __init__.py  deps.py  main.py  router.py
src/api/v1/endpoints/: buildings.py  defects.py  health.py  meters.py  predictive.py  premises.py  psd.py  repair.py  reports.py
src/api/v1/schemas/: __init__.py  common.py  defect.py  meter.py  predictive.py  repair.py  report.py
src/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  seeder.py
src/integrations/: llm_client.py
src/ml/: base.py
src/ml/detection/: classes.py  postprocessor.py  yolo_engine.py
src/ml/nlp/: __init__.py  psd_comparator.py  repair_classifier.py
src/ml/ocr/: engine.py  parser.py  preprocessor.py
src/ml/predictive/: features.py  forecaster.py
src/models/: __init__.py  base.py  building.py  defect.py  meter.py  predictive.py  repair.py  report.py  user.py
src/repositories/: __init__.py  base.py  defect_repository.py  meter_repository.py  repair_repository.py  unit_of_work.py
src/services/: __init__.py  base.py  defect_service.py  meter_service.py  predictive_service.py  repair_service.py  report_service.py
tests/: conftest.py
tests/e2e/: test_full_workflow.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_repair_service.py
ui/: app.py
ui/pages/: 01_Ремонтные_работы.py  02_Счётчики.py  03_Дефекты.py  04_Отчёты.py  05_Предиктивная_аналитика.py  06_ПСД_Сравнение.py
