[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iskin-engc"
version = "1.0.0"
description = "Инженерный ИскИн — Система автоматизации эксплуатации зданий на основе ML"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
keywords = [
    "building-management",
    "ml",
    "fastapi",
    "streamlit",
    "yolo",
    "ocr"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    
    # Database
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    
    # Validation & Settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # ML
    "ultralytics>=8.2.0",      # YOLOv8
    "easyocr>=1.7.0",
    "opencv-python>=4.10.0",
    "pillow>=10.3.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "kaggle>=1.6.0",           # Kaggle API для скачивания датасетов
    
    # HTTP Client
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    
    # Utils
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    
    # UI
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
iskin-api = "src.api.main:run"
iskin-ui = "streamlit run ui/app.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "src/core/seeder.py",
    "src/integrations/*",
    "src/ml/*",
]
